# bevy_ldtk

./: .gitignore  Cargo.toml  README.md  README.tpl
assets/: README.md  map1.ldtk
examples/: display_map.rs
src/: asset.rs  components.rs  lib.rs  pipeline.rs  system.rs
src/pipeline/: tilemap.frag  tilemap.vert
