[package]
name = "bevy_ldtk"
version = "0.2.4"
authors = ["Zicklag <zicklag@katharostech.com>"]
edition = "2018"
license-file = "LICENSE.md"
description = "A Bevy plugin for reading the LDtk 2D tile map format."
repository = "https://github.com/katharostech/bevy_ldtk"
documentation = "https://docs.rs/bevy_ldtk"
readme = "README.md"
keywords = ["gamedev", "map-editor", "tile", "bevy", "2D"]
categories = [
    "games",
    "game-development",
    "parser-implementations"
]

[features]
default = []
# Feature flag for attempting to support the latest Bevy from Git
bevy-unstable = []

[dependencies]
bevy = "0.4"
ldtk = "0.2"
anyhow = "1.0.37"
serde_json = "1.0.61"
thiserror = "1.0.23"

# Uncomment the below patch and enable the `bevy-unstable` feature to run on the latest unreleased Bevy
# [patch.crates-io]
# bevy = { git = "https://github.com/bevyengine/bevy.git" }