[package]
name = "bevy_ldtk"
version = "0.5.0"
authors = ["Zicklag <zicklag@katharostech.com>"]
edition = "2018"
license-file = "LICENSE.md"
description = "A Bevy plugin for reading the LDtk 2D tile map format."
repository = "https://github.com/katharostech/bevy_ldtk"
documentation = "https://docs.rs/bevy_ldtk"
readme = "README.md"
keywords = ["gamedev", "map-editor", "tile", "bevy", "2D"]
categories = [
    "games",
    "game-development",
    "parser-implementations"
]

[features]
default = []

[dependencies]
bevy = { version = "0.5", features = ["render"], default-features = false }
ldtk = "0.3"
anyhow = "1.0.37"
serde_json = "1.0.61"
thiserror = "1.0.23"

[dev-dependencies]
bevy = { version = "0.5", default-features = true }